update: build.gradle buildJPackage, MANIFEST.MF 추가